Bug 566135 - Fix for full screen games that automatically minimize when firefox is minimized on the taskbar. r=robarnold, a=final.